--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-        <div class="portfolio-card" data-item="ui" data-open="ui-1">
+        <!-- <div class="portfolio-card" data-item="ui" data-open="ui-1">
           <div class="card-body">
             <img src="./assets/images/portfolio-4.jpg" alt="portfolio icon">
             <div class="card-popup-box">
@@ -148,7 +148,7 @@
               <h3>Fantastic Design</h3>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- <div class="portfolio-container"></div> -->
       </div>
     </section>
